<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/postecollab_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18dp">


<!-- influencer request management-->
<FrameLayout
        android:id="@+id/influencer_request"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToOutline="true"
        android:background="@drawable/influencer_request"
        tools:layout_editor_absoluteX="18dp"
        tools:ignore="NotSibling">

    <ImageView
            android:id="@+id/influencer_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="12.6dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="310dp"
            android:layout_marginEnd="305dp"/>

    <TextView
            android:id="@+id/influencer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.5dp"
            android:layout_marginStart="82dp"
            android:layout_marginBottom="344dp"
            android:layout_marginEnd="181dp"
            android:text="@string/creators_name"
            android:gravity="top"
            android:fontFamily="@font/raleway_semibold"
            android:lineHeight="23sp"
            android:textSize="20sp"
            android:letterSpacing="0.02"
            android:textColor="#FFFFFF"/>

    <View
            android:id="@+id/influencer_location"
            android:layout_width="15.24dp"
            android:layout_height="17.48dp"
            android:layout_marginTop="56.26dp"
            android:layout_marginStart="82.88dp"
            android:layout_marginEnd="276.88dp"
            android:layout_marginBottom="313.76dp"
            android:background="@drawable/location_pin"/>

    <TextView
            android:id="@+id/influencer_location_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="54.5dp"
            android:layout_marginStart="102.12dp"
            android:layout_marginEnd="186.88dp"
            android:layout_marginBottom="312dp"
            android:text="@string/location_details"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="21sp"
            android:textSize="14sp"
            android:textColor="#7F858A"/>

    <!-- status button -->
    <Button
            android:id="@+id/status_btn"
            android:layout_width="88dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="281dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/blue_status_btn"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:lineHeight="21sp"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="#FFFFFF"/>


    <!-- whatsapp chat -->
    <View
            android:id="@+id/whatsapp_chat"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="58dp"
            android:layout_marginStart="327dp"
            android:layout_marginBottom="328dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/whastapp_frame"/>

    <View
            android:id="@+id/whatsapp_logo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="67dp"
            android:layout_marginStart="336dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="337dp"
            android:background="@drawable/whatsapp"/>

    <TextView
            android:id="@+id/chat_text"
            android:layout_width="42dp"
            android:layout_height="21dp"
            android:layout_marginTop="103dp"
            android:layout_marginStart="327dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="303dp"
            android:text="@string/chat"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="21sp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"/>

    <TextView
            android:id="@+id/influencer_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="top"
            android:lineSpacingExtra="-2sp"
            android:layout_marginTop="101dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="282dp"
            android:layout_marginEnd="77dp"
            android:text="@string/influencer_bio"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="19sp"
            android:textSize="14sp"
            android:textColor="#7F858A"/>

    <View
            android:id="@+id/separate_line"
            android:layout_width="381dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="131dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/separate_line"/>

    <TextView
            android:id="@+id/platform"
            android:layout_width="69dp"
            android:layout_height="24dp"
            android:gravity="top"
            android:layout_marginTop="155dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="226dp"
            android:layout_marginEnd="300dp"
            android:text="@string/platform"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="24sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/followers"
            android:layout_width="75dp"
            android:layout_height="24dp"
            android:gravity="top"
            android:layout_marginTop="190dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="191dp"
            android:layout_marginEnd="294dp"
            android:text="@string/followers"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="24sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/enagement_rate"
            android:layout_width="143dp"
            android:layout_height="24dp"
            android:gravity="top"
            android:layout_marginTop="225dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="156dp"
            android:layout_marginEnd="226dp"
            android:text="@string/engagement"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="24sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/no_of_post"
            android:layout_width="134dp"
            android:layout_height="24dp"
            android:gravity="top"
            android:layout_marginTop="260dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="121dp"
            android:layout_marginEnd="235dp"
            android:text="@string/number_of_p"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="24sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>

    <View
            android:id="@+id/insta_logo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="155dp"
            android:layout_marginStart="345dp"
            android:layout_marginBottom="226dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/insta_logo"/>

    <TextView
            android:id="@+id/f_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginTop="192dp"
            android:layout_marginStart="310dp"
            android:layout_marginBottom="191dp"
            android:layout_marginEnd="9dp"
            android:text="@string/f_count"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="22sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/er_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginTop="227dp"
            android:layout_marginStart="337dp"
            android:layout_marginBottom="156dp"
            android:layout_marginEnd="10dp"
            android:text="@string/ER_count"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="22sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/p_count"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:gravity="top"
            android:layout_marginTop="262dp"
            android:layout_marginStart="346dp"
            android:layout_marginBottom="226dp"
            android:layout_marginEnd="9dp"
            android:text="@string/p_count"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="22sp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:id="@+id/view_insights"
            android:layout_width="97dp"
            android:layout_height="21dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="308dp"
            android:layout_marginStart="139dp"
            android:layout_marginBottom="76dp"
            android:layout_marginEnd="139dp"
            android:text="@string/view_insight"
            android:fontFamily="@font/poppins_medium"
            android:lineHeight="21sp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"/>

    <FrameLayout
            android:id="@+id/green_button"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:layout_marginTop="353dp"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="258.5dp"
            android:background="@drawable/green_button">
        <TextView
                android:id="@+id/accept_btn"
                android:layout_width="56dp"
                android:layout_height="22dp"
                android:gravity="top"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/accept_btn"
                android:lineHeight="19sp"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:letterSpacing="0.02"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/red_button"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:layout_marginTop="353dp"
            android:layout_marginStart="134dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="132.5dp"
            android:background="@drawable/red_button">
        <TextView
                android:id="@+id/reject_btn"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:gravity="top"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/reject_btn"
                android:lineHeight="19sp"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:letterSpacing="0.02"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/orange_button"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:layout_marginTop="353dp"
            android:layout_marginStart="257dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="6.5dp"
            android:background="@drawable/orange_button">
        <TextView
                android:id="@+id/hold_btn"
                android:layout_width="38dp"
                android:layout_height="22dp"
                android:gravity="top"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/hold_btn"
                android:lineHeight="19sp"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:letterSpacing="0.02"/>
    </FrameLayout>
</FrameLayout>
</FrameLayout>
